Big refactoring and improvements